--- a/001-tic-tac-toe/style.css
+++ b/001-tic-tac-toe/style.css
@@ -77,6 +77,11 @@ button {
     width: 50px;
     height: 50px;
     border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #game #board #tile-0, #game #board #tile-1, #game #board #tile-2 { border-top: none; }
